# mcp-test

./: .env  .env.example  .gitignore  README.md  app.yaml  pyproject.toml
server/: app.py  auth_middleware.py  config.py  main.py  tools.py
static/: index.html
